--- a/LB1/LB1.csproj
+++ b/LB1/LB1.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_4._20</RootNamespace>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LB1_library\LB1_library.csproj" />
+  </ItemGroup>
 
 </Project>
