--- a/LB1/LB1.csproj
+++ b/LB1/LB1.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LB1_library\LB1_library.csproj" />
+    <ProjectReference Include="..\PersonLibrary\PersonLibrary.csproj" />
   </ItemGroup>
 
 </Project>
